change package version

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "brain-sergye",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "This is a simple console game",
   "main": "",
   "bin": {
-    "brain-games": "dist/bin/brain-games.js"
+    "brain-games": "dist/bin/brain-games.js",
+    "brain-even": "dist/bin/brain-even.js"
   },
   "scripts": {
     "babel-node": "babel-node",
