change package version

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "brain-sergye",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "This is a simple console game",
   "main": "",
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
-    "brain-even": "dist/bin/brain-even.js"
+    "brain-even": "dist/bin/brain-even.js",
+    "brain-calc": "dist/bin/brain-calc.js"
   },
   "scripts": {
     "babel-node": "babel-node",
