--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-sergye",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "This is a simple console game",
   "main": "",
   "bin": {
@@ -32,6 +32,7 @@
   },
   "homepage": "https://github.com/sergye/project-lvl1-s340#readme",
   "dependencies": {
+    "hexlet-pairs-data": "^1.0.8",
     "readline-sync": "^1.4.9"
   },
   "devDependencies": {
