--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "brain-sergye",
-  "version": "1.0.7",
+  "version": "1.0.10",
   "description": "This is a simple console game",
   "main": "",
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
     "brain-even": "dist/bin/brain-even.js",
-    "brain-calc": "dist/bin/brain-calc.js"
+    "brain-calc": "dist/bin/brain-calc.js",
+    "brain-gcd": "dist/bin/brain-gcd.js"
   },
   "scripts": {
     "babel-node": "babel-node",
@@ -32,6 +33,7 @@
   },
   "homepage": "https://github.com/sergye/project-lvl1-s340#readme",
   "dependencies": {
+    "hexlet-pairs": "^1.0.8",
     "hexlet-pairs-data": "^1.0.8",
     "readline-sync": "^1.4.9"
   },
