--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "brain-sergye",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "This is a simple console game",
   "main": "",
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
     "brain-even": "dist/bin/brain-even.js",
     "brain-calc": "dist/bin/brain-calc.js",
-    "brain-gcd": "dist/bin/brain-gcd.js"
+    "brain-gcd": "dist/bin/brain-gcd.js",
+    "brain-balance": "dist/bin/brain-balance.js"
   },
   "scripts": {
     "babel-node": "babel-node",
