--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
   "name": "brain-sergye",
-  "version": "1.0.15",
+  "version": "1.0.16",
   "description": "This is a simple console game",
   "main": "",
   "bin": {
-    "brain-games": "dist/bin/brain-games.js",
-    "brain-even": "dist/bin/brain-even.js",
-    "brain-calc": "dist/bin/brain-calc.js",
-    "brain-gcd": "dist/bin/brain-gcd.js",
-    "brain-balance": "dist/bin/brain-balance.js",
-    "brain-progression": "dist/bin/brain-progression.js",
-    "brain-prime": "dist/bin/brain-prime.js"
+    "brain-games": "dist/bin/brain-games.js"
   },
   "scripts": {
     "babel-node": "babel-node",
